# pythonseminars

./: .replit  README.md  pyproject.toml  replit.nix  test.py
Asessments/: README.md
Assignments/: README.md
Assignments/Task1/: pizza_price.py
Assignments/Task2/: README.md  cat_shelter.py  cat_shelter_1.txt  cat_shelter_2.txt  cat_shelter_3.txt
Assignments/Task3/: README.md  passwd (copy).txt  passwd.txt  passwordTask3.py
Sessions/: 09102023.py  README.md  main.py  note.txt
Sessions/Week1/homework/: practical1.py  practical2.py  practical3.py  practical4.py  practical5.py
Sessions/Week1/labwork/: labwork.py
Sessions/Week2/homework/: practical1.py  practical2.py  practical3.py  practical4.py
Sessions/Week3/: 09-10-2023.py
Sessions/Week3/homework/: practical1.py  practical2.py  practical3.py  practical4.py  practical5.py  resources.txt
Sessions/Week3/labwork/: 09-10-2023.py
Sessions/Week4/homework/: practical1.py  practical2.py  practical3.py  practical4.py  practical5.py  practical6.py  practical7.py
Sessions/Week4/labwork/: 16-10-2023.py
Sessions/Week5/homework/: homework.txt  practical1.py  practical2.py  practical3.py  practical4.py  practical5.py  practical6.py
Sessions/Week5/labwork/: 23-10-2023.py  Practical 05.docx  my_utils.py  script.py  total.py  utils_test.py
Sessions/Week6/homework/: practical1.py  practical2.py  practical3.py  practical4.py  practical5.py
Sessions/Week6/labwork/: labwork.py
Sessions/Week7/homework/: practical1.py  practical2.py  practical3.py  practical4.py
Sessions/Week7/labwork/: 06-11-2023.py
(+13 files in other folders)
