[tool.poetry]
name = "python-seminars"
version = "1.0.0"
description = "Used to store seminar work"
authors = ["Zak Richards Z.Richards9969@student.leedsbeckett.ac.uk"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.26.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"